# cpp_client_telemetry

./: .gitignore  CMakeLists.txt  OneDsCppSdk.iOS.podspec  build-sqlite.sh
docker/centos7/: Dockerfile
docs/: custom-transmit-profile.md
lib/android_build/app/: build.gradle
lib/android_build/app/src/main/cpp/: CMakeLists.txt
lib/android_build/maesdk/: build.gradle
lib/android_build/maesdk/src/main/cpp/: CMakeLists.txt
lib/android_build/maesdk/src/main/java/com/microsoft/applications/events/: ILogger.java  LogManager.java  Logger.java
lib/api/: ContextFieldsProvider.cpp  LogManagerImpl.cpp  Logger.cpp  Logger.hpp
lib/http/: HttpClient_Android.cpp
lib/include/mat/: config-MIP.h
lib/include/public/: NullObjects.hpp  Version.hpp
lib/jni/: LogManager_jni.cpp  Logger_jni.cpp
lib/pal/: PAL.cpp  PAL.hpp  WorkerThread.hpp
lib/pal/desktop/: WindowsDesktopDeviceInformationImpl.cpp  WindowsDesktopNetworkInformationImpl.cpp  desktop.vcxitems  desktop.vcxitems.filters
lib/pal/posix/: DeviceInformationImpl_Android.cpp  SystemInformationImpl_Android.cpp  sysinfo_sources.cpp  sysinfo_sources_impl.hpp  sysinfo_utils_ios.mm
lib/pal/universal/: universal.vcxitems  universal.vcxitems.filters
lib/tpm/: DeviceStateHandler.cpp  TransmissionPolicyManager.cpp  TransmitProfiles.cpp
sqlite/: CMakeLists.txt
tools/: setup-buildtools-apple.sh
wrappers/obj-c/: ODWLogConfiguration.h
